panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__preprocessor__test_error_nested_va_opt.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/preprocessor/test_error_nested_va_opt.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: `__VA_OPT__` nested in another `__VA_OPT__`
   ╭─[panko/tests/cases/preprocessor/test_error_nested_va_opt.c:1:40]
   │
 1 │ #define MACRO(x, y, ...) __VA_OPT__(42 __VA_OPT__(-)) x + y
   │                          ─────┬────    ─────┬────  
   │                               │             ╰────── this `__VA_OPT__` is nested ...
   │                               │                    
   │                               ╰──────────────────── ... in this `__VA_OPT__`
───╯
